opam-version: "1.2"
authors: "John Else"
homepage: "https://github.com/johnelse/ocaml-webtest"
bug-reports: "https://github.com/johnelse/ocaml-webtest/issues"
dev-repo: "git://github.com/johnelse/ocaml-webtest"
maintainer: "john.else@gmail.com"
available: [ ocaml-version >= "4.02.1" ]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" ] {with-test}
]

depends: [
  "dune"
  "js_of_ocaml" {>= "3.4.0"}
  "js_of_ocaml-ppx" {>= "3.4.0"}
  "ocaml" {>= "4.02.1"}
  "webtest"
]
